--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -80,5 +80,5 @@
 <script async defer src="https://buttons.github.io/buttons.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 
-<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="scripts-AULOARMS.js" defer></script><script src="main-ER5LZ7LJ.js" type="module"></script></body>
+<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="scripts-AULOARMS.js" defer></script><script src="main-CCJZ4FEM.js" type="module"></script></body>
 </html>
